Added all filters

--- a/restaurants/static/restaurants/restaurant_list.css
+++ b/restaurants/static/restaurants/restaurant_list.css
@@ -85,9 +85,15 @@ ul {
 
 .filter-form form {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     gap: 10px;
     margin: 0;
+}
+#distanceValue {
+    display: inline-block;
+    min-width: 20px; 
+    text-align: right;
 }
 
 .filter-form input[type="text"],
@@ -120,3 +126,11 @@ ul {
     align-items: center;
 }
 
+.distanceRange {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 60px; /* może być więcej, zależnie od wyglądu */
+    margin-right: 16px; /* <-- zwiększa odstęp od przycisku */
+    font-weight: bold;
+}
